2006-11-08  Thorsten Kukuk  <kukuk@thkukuk.de>

	* configure.in: Add modules/pam_faildelay/Makefile.
	* doc/sag/Linux-PAM_SAG.xml: Include pam_faildelay.xml.
	* doc/sag/pam_faildelay.xml: New.
	* libpam/pam_static_modules.h: Include static pam_faildelay data.
	* modules/Makefile.am: Add pam_faildelay directory.
	* modules/pam_faildelay/Makefile.am: New.
	* modules/pam_faildelay/README: New, generated from XML file.
	* modules/pam_faildelay/README.xml: New.
	* modules/pam_faildelay/pam_faildelay.8: New, generated from xml.
	* modules/pam_faildelay/pam_faildelay.8.xml: New.
	* modules/pam_faildelay/pam_faildelay.c: New.
	* modules/pam_faildelay/tst-pam_faildelay: New.

	* po/POTFILES.in: Add pam_faildelay.c and pam_loginuid.c.

2006-11-07  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_cracklib/pam_cracklib.c: PAM_DEBUG_ARG
	is a bit mask and not a boolean value (Reported by
	Jochen Voss <voss@seehuhn.de>).

2006-10-26  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/man/pam.3.xml: Add pam_get_user function.

	* modules/pam_motd/pam_motd.8.xml: Fix typo.

2006-10-24  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_namespace/pam_namespace.c: Reserve space for
	trailing zero.

2006-10-24  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/support.c (_unix_verify_password): Try system
	crypt() if we don't know the hash alogorithm.
	* modules/pam_unix/unix_chkpwd.c (_unix_verify_password): Likewise.

2006-10-13  Tomas Mraz <t8m@centrum.cz>

	* doc/mwg/Linux-PAM_MWG.xml: Add id[s] to section[s].
	* doc/sag/pam_access.xml: Likewise.
	* doc/sag/pam_echo.xml: Likewise.
	* doc/sag/pam_env.xml: Likewise.
	* doc/sag/pam_exec.xml: Likewise.
	* doc/sag/pam_group.xml: Likewise.
	* doc/sag/pam_limits.xml: Likewise.
	* doc/sag/pam_namespace.xml: Likewise.
	* doc/sag/pam_time.xml: Likewise.
	* doc/sag/Linux-PAM_SAG.xml: Add id to book.
	* doc/adg/Linux-PAM_ADG.xml: Add id to book.
	* doc/mwg/Linux-PAM_MWG.xml: Add id to book.


2006-10-07  Thorsten Kukuk  <kukuk@thkukuk.de>
