@@ -1,8 +1,37 @@
-/* pam_data.c */
-
 /*
- * $Id$
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ * 1. Redistributions of source code must retain the above copyright
+ *    notice, and the entire permission notice in its entirety,
+ *    including the disclaimer of warranties.
+ * 2. Redistributions in binary form must reproduce the above copyright
+ *    notice, this list of conditions and the following disclaimer in the
+ *    documentation and/or other materials provided with the distribution.
+ * 3. The name of the author may not be used to endorse or promote
+ *    products derived from this software without specific prior
+ *    written permission.
+ *
+ * ALTERNATIVELY, this product may be distributed under the terms of
+ * the GNU Public License, in which case the provisions of the GPL are
+ * required INSTEAD OF the above restrictions.  (This clause is
+ * necessary due to a potential bad interaction between the GPL and
+ * the restrictions contained in a BSD-style copyright.)
+ *
+ * THIS SOFTWARE IS PROVIDED ``AS IS'' AND ANY EXPRESS OR IMPLIED
+ * WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
+ * OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+ * DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT,
+ * INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+ * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+ * SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
+ * HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
+ * STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+ * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
+ * OF THE POSSIBILITY OF SUCH DAMAGE.
  */
+
+#include "config.h"
 
 #include "pam_private.h"
 
@@ -19,7 +48,7 @@ static struct pam_data *_pam_locate_data(const pam_handle_t *pamh,
     IF_NO_PAMH("_pam_locate_data", pamh, NULL);
 
     data = pamh->data;
-    
+
     while (data) {
 	if (!strcmp(data->name, name)) {
 	    return data;
@@ -37,13 +66,19 @@ int pam_set_data(
     void (*cleanup)(pam_handle_t *pamh, void *data, int error_status))
 {
     struct pam_data *data_entry;
-    
+
     D(("called"));
 
     IF_NO_PAMH("pam_set_data", pamh, PAM_SYSTEM_ERR);
 
     if (__PAM_FROM_APP(pamh)) {
 	D(("called from application!?"));
+	return PAM_SYSTEM_ERR;
+    }
+
+    /* module_data_name should not be NULL */
+    if (module_data_name == NULL) {
+	D(("called with NULL as module_data_name"));
 	return PAM_SYSTEM_ERR;
     }
 
@@ -91,6 +126,12 @@ int pam_get_data(
 
     if (__PAM_FROM_APP(pamh)) {
 	D(("called from application!?"));
+	return PAM_SYSTEM_ERR;
+    }
+
+    /* module_data_name should not be NULL */
+    if (module_data_name == NULL) {
+	D(("called with NULL as module_data_name"));
 	return PAM_SYSTEM_ERR;
     }
 
